--- a/src/app.css
+++ b/src/app.css
@@ -12,7 +12,7 @@ for mobiles. This is just for performance in mobile devices. */
   font-style: normal;
   font-weight: 500;
   src: local(''),
-       url('../static/chakra-petch-v9-latin-500.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-       url('../static/chakra-petch-v9-latin-500.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+       url('/chakra-petch-v9-latin-500.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+       url('/chakra-petch-v9-latin-500.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
   }
 }
