--- a/src/app.css
+++ b/src/app.css
@@ -16,3 +16,7 @@ for mobiles. This is just for performance in mobile devices. */
        url('/chakra-petch-v9-latin-500.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
   }
 }
+
+* {
+  @apply lg_font-['Chakra_Petch'] font-['Arial']
+}
